--- a/nosotros.html
+++ b/nosotros.html
@@ -41,9 +41,9 @@
     </nav>
     <!--Informacion-->
     <section class="hidden">
-        <div class="contenedor" class="container-fluid ">
+        <div class=""container-fluid contenedor">
             <div class="container-fluid ">
-                <div class="caja" class="container-fluid ">
+                <div class="row caja">
                     <h2>Sobre nosotros</h2><br><br>
                     <ul>En HA Marketing Digital entendemos que los negocios pequeños tienen un presupuesto limitado,
                         pero eso no significa que no puedan tener una presencia efectiva en línea. Nos especializamos en
