--- a/nosotros.html
+++ b/nosotros.html
@@ -41,10 +41,10 @@
     </nav>
     <!--Informacion-->
     <section class="hidden">
-        <div class=""container-fluid contenedor">
-            <div class="container-fluid ">
-                <div class="row caja">
-                    <h2>Sobre nosotros</h2><br><br>
+        <div class="container-fluid contenedor">
+            <div class="row">
+                <div class="col-lg-6">
+                    <br><br><h2>Sobre nosotros</h2><br><br>
                     <ul>En HA Marketing Digital entendemos que los negocios pequeños tienen un presupuesto limitado,
                         pero eso no significa que no puedan tener una presencia efectiva en línea. Nos especializamos en
                         ofrecer servicios de marketing digital asequibles y de alta calidad para ayudar a las pequeñas
@@ -53,8 +53,8 @@
                         promocionales, nuestro equipo altamente capacitado se encarga de todo para que nuestros clientes
                         puedan enfocarse en hacer crecer su negocio.</ul>
                 </div>
-                <div class="caja" class="p-2">
-                    <h2>Nuestras Ofertas</h2><br><br>
+                <div class="col-lg-6">
+                    <br><br><h2>Nuestras Ofertas</h2><br><br>
                     <ul>
                         <li>Creación de logotipos personalizados</li>
                         <li>Diseño de invitaciones y tarjetas de presentación</li>
